src/components/character/character.css
/* ... */
.combatMods div {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    width: 25%;
    height: 19.6px;
}

.skillMods div:nth-child(odd), .combatMods div:nth-child(odd) {
    background: lightgray
}

.skillMods div p:first-child, .skillAdept p:first-child, .skillRow p:first-child, .combatMods p:first-child {
    font-family: 'Vollkorn SC', serif;
    font-weight: bold;
    margin-top: 2px;
    padding-left: 5px;
}

.skillMods div p:nth-child(2), .combatMods div p:nth-child(2) {
    width: 24px;
    text-align: center;
}

.skillAdept {
    display: flex;
    justify-content: space-between;
    border-top: 2px solid lightgrey;
    height: 19.6px;
}

.skilladeptLocation {
    width: 140px;
    text-align: center;
}

.skillsuiteShell {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
}

.skillsuiteShell .skillRow {
    display: flex;
    justify-content: space-between;
}

.skillsuiteShell .skillRow:nth-child(odd), .combatRow .skillRow:nth-child(odd) {
    background: lightgray
}

.skillsuiteShell .skillRow:first-child {
    background: #222;
}

.skillRow p, .skillRow input {
    text-align: center;
    width: 40px;
    position: unset;
}

.skillRow p:first-child {
    text-align: left;
    width: 90px;
}

.skillRow h2:nth-child(2), .skillRow h2:nth-child(3), .skillRow h2:nth-child(4) {
    font-size: 10px;
    padding-top: 3px;
    padding-left: 0px;
    width: 40px;
    text-align: center;
}

.navLang {
    width: 95px !important;
    font-size: 11px !important;
}

.advSkillBackgroundShell {
    display: flex;
    justify-content: space-between;
}

.advSkillBackgroundShell div {
    width: 100%;
}

.advSkillBackgroundShell div .skillRow {
    display: flex;
    justify-content: space-between;
}

.advSkillBackgroundShell div .skillRow:first-child {
    background: #222
}

.advSkillBackgroundShell div .skillRow h2:first-child, .advSkillBackgroundShell div .skillRow p:first-child {
    width: 151px;
    text-align: left;
    padding-left: 10px;
}

.advSkillBackgroundShell div .skillRow h2:nth-child(2), .advSkillBackgroundShell div .skillRow h2:nth-child(3),
.advSkillBackgroundShell div .skillRow h2:nth-child(4), .advSkillBackgroundShell div .skillRow p:nth-child(2),
.advSkillBackgroundShell div .skillRow p:nth-child(3), .advSkillBackgroundShell div .skillRow p:nth-child(4) {
    width: 40px;
}

.advSkillBackgroundShell div .stripings {
    position: absolute;
    top: 0;
}

.advSkillBackgroundShell div .stripings div {
    height: 19.6px;
    width: 50%;
}

.advSkillBackgroundShell div .stripings div:nth-child(even) {
    background: lightgray
}

.stripeDiv {
    display: flex;
    justify-content: space-between;
}

.stripeDiv div:first-child {
    min-width: 191px;
    border-right: 2px solid grey;
}

.stripeDiv:first-child div:first-child {
    border-right: none;
}

.stripeDiv div:nth-child(2) {
    width: 80px;
    border-right: 2px solid #222;
    background: unset !important
}

.advSkillBackgroundShell div:nth-child(2) .stripings .stripeDiv div:nth-child(2) {
    border-right: none;
}

#nativename {
    width: 93px
}

.combatshell {
    position: absolute;
    top: 532px;
    left: 185px;
    display: flex;
}

.combatSkills {
    width: 225px;
    justify-content: space-between;
    display: flex;
    flex-direction: column;
    border-right: 2px solid #222;
}

.combatAdvancedSkill {
    width: 386px;
    height: 186px;
}

.combatRow .skillRow {
    display: flex;
}

.combatRow div h2 {
    text-align: left;
    padding-left: 10px;
    margin-right: -1px;
}

.combatRow .skillRow p, .combatRow .skillRow h2, .combatRow .skillRow input, .combatCost, .combatRank, .combatTotalCost {
    width: 25%;
}

.combatRow .skillRow p:first-child, .combatRow .skillRow h2:first-child, .combatInput {
    width: 51%;
}

.combatAdept {
    display: flex;
    justify-content: space-between;
    border-top: 2px solid lightgrey;
    height: 19.6px;
}

.combatAdept p:first-child {
    font-family: 'Vollkorn SC', serif;
    font-weight: bold;
    margin-top: 2px;
    padding-left: 5px;
}

.combatAdept input, .combatAdept p {
    width: 50%;
    text-align: center;
}

.combatSkillRowShell .skillRow h2, .combatRanks, .combatCost, .combatTotalCost {
    width: 25% !important;
}

.combatSkillRowShell .skillRow h2:first-child, .combatInput {
    width: 55% !important;
}

.combatSkillRowShell .stripings div {
    height: 19.6px;
    width: 55%;
}

.combatStripings .stripeDiv div:first-child {
    width: 55%;
}

.stripeDiv div:first-child {
    width: 50%;
    border-right: 2px solid grey;
}

.stripeDiv:first-child div:first-child {
    border-right: none;
}

.stripeDiv div:nth-child(2) {
    width: 50%;
    border-right: 2px solid #222;
    background: unset !important
}

.combatSkillRowShell .stripings {
    width: 193px;
}

.combatSkillRowShell .stripings .stripeDiv {
    width: 100%;
    height: 20px;
}

.combatSkillRowShell .stripings .stripeDiv div {
    min-width: unset;
    height: 20px;
}

.skillsUntrainedDiv {
    position: absolute;
    left: 83px;
    z-index: 9999;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.stressShell {
    display: flex;
    justify-content: space-between;
}

.stressShell div {
    display: flex;
    align-items: center;
    width: 50%;
}

.stressShell div p, .stressShell div input {
    width: 50%;
}

.stressShell div:first-child {
    border: 2px solid #990000;
}

.stressShell div p:first-child, .editingStressThreshold p {
    font-family: 'Vollkorn SC', serif;
    font-weight: bold;
    padding-top: 2px;
}

.editingStressThreshold input, .editingStressThreshold p {
    width: 50%;
}

#not-found { 
    text-align: center;
    width: 400px;
}

#not-found p {
    color: whitesmoke;
    font-family: "north";
    margin: 0;
    font-size: 30px;
    text-shadow: 4px 2px 2px #222
}

#not-found p:first-child {
    font-size: 145px;
}

